in preparation for warnings cleanup to solve Lucene 2.9 deprecations: fixing typos, unused imports, unimportant glitches found by findbugs
git-svn-id: https://svn.jboss.org/repos/hibernate/search/trunk@18710 1b8cb986-b30d-0410-93ca-fae66ebed9b2